###Fixed sidemenu overflow hidden

--- a/public/assets/css/fix.css
+++ b/public/assets/css/fix.css
@@ -23,5 +23,5 @@
 }
 
 .site-navbar-small .site-menubar{
-    height: 100%;
+    overflow-x: hidden;
 }
